--- a/notebook/Subnetworks.ipynb
+++ b/notebook/Subnetworks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -48,6 +48,7 @@
     "import leidenalg as la\n",
     "import igraph as ig\n",
     "from cdlib import algorithms\n",
+    "import tweets_utils\n",
     "warnings.filterwarnings('ignore')\n",
     "path = \"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/network/\"\n",
     "%autosave 3600"
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,28 +237,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'glob' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9820/3418675801.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpath_ccdh_rt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/large_files/ccdh/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mccdh_rt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_ccdh_rt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"rt_bad.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mgood_rt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_ccdh_rt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"rt_good.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mpath_dozen\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mbad_dozen\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_dozen\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"disinformation_users.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'glob' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "path_ccdh_rt = glob.glob(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/large_files/ccdh/\")\n",
+    "path_ccdh_rt = glob.glob(\"F:/Supsi/COVID-19-Tweets/large_files/ccdh/\")\n",
     "ccdh_rt = pd.read_csv(path_ccdh_rt[0] + \"rt_bad.csv\")\n",
     "good_rt = pd.read_csv(path_ccdh_rt[0] + \"rt_good.csv\")\n",
     "path_dozen = glob.glob(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/\")\n",
     "bad_dozen = pd.read_csv(path_dozen[0] + \"disinformation_users.csv\")\n",
-    "good_dozen = pd.read_csv(path_dozen[0] + \"good_dozen.csv\")"
+    "good_dozen = pd.read_csv(path_dozen[0] + \"good_dozen.csv\")\n",
+    "files_tweets = glob.glob(\"F:/Supsi/COVID-19-Tweets/*/tweets.csv\")"
    ]
   },
   {
@@ -309,15 +299,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  2.3848919000000137\n",
-      "Time:  1.4386784000000148\n"
+      "Time:  1.3762672000002567\n",
+      "Time:  1.0380482999999003\n"
      ]
     }
    ],
@@ -329,6 +319,128 @@
     "louvain_1 = read_from_json(louvain_path)\n",
     "ccdh_rt_flt_1 = ccdh_rt[ccdh_rt.user_screen_name.isin([x for x in louvain_1])]\n",
     "good_rt_flt_1 = good_rt[good_rt.user_screen_name.isin([x for x in louvain_1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# nt_1_users = list(louvain_1.keys())\n",
+    "# result = []\n",
+    "# text = []\n",
+    "# importlib.reload(tweets_utils)\n",
+    "# start_time = time.perf_counter()\n",
+    "# j = 0\n",
+    "# cols_tweets = ['user_screen_name', 'text']\n",
+    "# for filename in files_tweets:\n",
+    "#     print(f\"Reading file: {filename}\")\n",
+    "#     result.extend(tweets_utils.process_all_data(filename, cols_tweets, True, nt_1_users))\n",
+    "#     lista = result[j]\n",
+    "#     j = j + 1\n",
+    "#     print(f\"Mese numero {j}\")\n",
+    "#     for i in range(len(lista)):\n",
+    "#         text.extend(lista[i][\"text\"])\n",
+    "# stop_time = time.perf_counter()\n",
+    "# print(\"Time: \",stop_time-start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_txt_nt1 = pd.DataFrame(text, columns = ['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_txt_nt1.to_csv(\"C:/Users/gianl/Desktop/Gi/Supsi/nt_1_txt.csv\", line_terminator=\"\\n\",\n",
+    "                  encoding=\"utf-8\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_names = glob.glob(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/\")[0]\n",
+    "# cachedStopWords = stopwords.words(\"english\")\n",
+    "good = pd.read_csv(path_names + \"all_good_users.csv\", lineterminator=\"\\n\", low_memory=False)\n",
+    "bad = pd.read_csv(path_names + \"disinformation_users.csv\", lineterminator=\"\\n\", low_memory=False)\n",
+    "words_custom = pd.read_csv(path_names + \"words_to_remove.csv\", lineterminator=\"\\n\", low_memory=False)\n",
+    "good = tweets_utils.clean_data_format(good)\n",
+    "bad = tweets_utils.clean_data_format(bad)\n",
+    "custom_words = list(good[\"screen_name\"])\n",
+    "custom_words.extend(list(bad[\"screen_name\"]))\n",
+    "custom_words.extend(list(words_custom[\"word\"]))\n",
+    "custom_words = [item.lower() for item in custom_words]\n",
+    "df = pd.DataFrame(custom_words, columns=[\"word\"])\n",
+    "df.to_csv(path + \"custom_toremove_words.csv\", line_terminator=\"\\n\", encoding=\"utf-8\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<pre><code> python file_generator.py \"filename\" --outfilename \"output_filename\"</code></pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1142470"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%run -i 'C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/sage/print_info.py' \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing: [##################################################] 100/100\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
    ]
   },
   {
