End suspended collection

--- a/notebook/Subnetworks.ipynb
+++ b/notebook/Subnetworks.ipynb
@@ -252,7 +252,8 @@
     "good_dozen = pd.read_csv(path_dozen[0] + \"good_dozen.csv\")\n",
     "files_tweets = glob.glob(\"F:/Supsi/COVID-19-Tweets/*/tweets.csv\")\n",
     "sage_path = glob.glob(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/sage/data/\")\n",
-    "df_sage = pd.read_csv(sage_path[0] + \"outfile.csv\", low_memory=False, lineterminator=\"\\n\")"
+    "df_sage = pd.read_csv(sage_path[0] + \"networks_50.csv\", low_memory=False, \n",
+    "                      lineterminator=\"\\n\")"
    ]
   },
   {
