--- a/notebook/network/Subnetworks.ipynb
+++ b/notebook/network/Subnetworks.ipynb
@@ -6,19 +6,14 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(3600000)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autosaving every 3600 seconds\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tweets_utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_8060/3271483391.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0migraph\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mig\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mcdlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0malgorithms\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtweets_utils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtweets_utils\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilterwarnings\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ignore'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/network/\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tweets_utils'"
      ]
     }
    ],
@@ -49,7 +44,7 @@
     "import leidenalg as la\n",
     "import igraph as ig\n",
     "from cdlib import algorithms\n",
-    "import tweets_utils\n",
+    "from tweets_utils import tweets_utils\n",
     "warnings.filterwarnings('ignore')\n",
     "path = \"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/network/\"\n",
     "%autosave 3600"
