Make thresold study

--- a/notebook/misc/Process_Tweets.ipynb
+++ b/notebook/misc/Process_Tweets.ipynb
@@ -45,6 +45,8 @@
     "import time\n",
     "from time import perf_counter\n",
     "import glob\n",
+    "import sys\n",
+    "sys.path.append('C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/notebook/tweet_utils')\n",
     "import tweets_utils\n",
     "import csv\n",
     "import importlib\n",
@@ -1097,39 +1099,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['F:/Supsi/COVID-19-Tweets\\\\2020-01\\\\users.csv',\n",
-       " 'F:/Supsi/COVID-19-Tweets\\\\2020-02\\\\users.csv',\n",
-       " 'F:/Supsi/COVID-19-Tweets\\\\2020-03\\\\users.csv',\n",
-       " 'F:/Supsi/COVID-19-Tweets\\\\2020-04\\\\users.csv',\n",
-       " 'F:/Supsi/COVID-19-Tweets\\\\2020-05\\\\users.csv']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "files_users"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = pd.read_csv(\"F:/Supsi/COVID-19-Tweets/large_files/tweets_sample_international.csv\", low_memory=False, lineterminator = '\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -1201,37 +1170,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Process... \n",
-      "Process... \n",
-      "Process... \n",
-      "Process... \n",
-      "Process... \n",
-      "Process... \n",
-      "Process... \n",
-      "Process... \n",
-      "Process... \n"
-     ]
-    }
-   ],
-   "source": [
-    "chunksize = int(1e6)\n",
-    "df_result = pd.DataFrame()\n",
-    "for chunk in pd.read_csv(files_users[4], chunksize=chunksize, lineterminator = '\\n'):\n",
-    "    print(\"Process... \")\n",
-    "    df_result = df_result.append(chunk.sample(n=6000, random_state=1))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1252,7 +1190,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "cols_tweets = ['id']\n",
+    "cols_tweets = ['user_screen_name', \"rt_user_screen_name\", \"rt_created_at\"]\n",
     "#     u'user_screen_name', \n",
     "#         u'rt_user_screen_name', u'rt_user_id', \n",
     "#         u'in_reply_to_screen_name', u'in_reply_to_user_id',\n",
@@ -1319,108 +1257,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading file: F:/Supsi/COVID-19-Tweets\\2020-01\\users.csv\n",
-      "Processing chunk 1\n",
-      "Processing chunk 2\n",
-      "Mese numero 1\n",
-      "Reading file: F:/Supsi/COVID-19-Tweets\\2020-02\\users.csv\n",
-      "Processing chunk 1\n",
-      "Processing chunk 2\n",
-      "Processing chunk 3\n",
-      "Processing chunk 4\n",
-      "Processing chunk 5\n",
-      "Mese numero 2\n",
-      "Reading file: F:/Supsi/COVID-19-Tweets\\2020-03\\users.csv\n",
-      "Processing chunk 1\n",
-      "Processing chunk 2\n",
-      "Processing chunk 3\n",
-      "Processing chunk 4\n",
-      "Processing chunk 5\n",
-      "Processing chunk 6\n",
-      "Mese numero 3\n",
-      "Reading file: F:/Supsi/COVID-19-Tweets\\2020-04\\users.csv\n",
-      "Processing chunk 1\n",
-      "Processing chunk 2\n",
-      "Processing chunk 3\n",
-      "Processing chunk 4\n",
-      "Processing chunk 5\n",
-      "Processing chunk 6\n",
-      "Mese numero 4\n",
-      "Reading file: F:/Supsi/COVID-19-Tweets\\2020-05\\users.csv\n",
-      "Processing chunk 1\n",
-      "Processing chunk 2\n",
-      "Processing chunk 3\n",
-      "Processing chunk 4\n",
-      "Processing chunk 5\n",
-      "Processing chunk 6\n",
-      "Processing chunk 7\n",
-      "Processing chunk 8\n",
-      "Processing chunk 9\n",
-      "Mese numero 5\n",
-      "Time:  1112.1479373000002\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = []\n",
-    "importlib.reload(tweets_utils)\n",
-    "start_time = time.perf_counter()\n",
-    "j = 0\n",
-    "df = pd.DataFrame()\n",
-    "for filename in files_users:\n",
-    "    print(f\"Reading file: {filename}\")\n",
-    "    result.extend(tweets_utils.process_all_data(filename, cols_users, False))\n",
-    "    lista = result[j]\n",
-    "    j = j + 1\n",
-    "    print(f\"Mese numero {j}\")\n",
-    "    for i in range(len(lista)):\n",
-    "        df = df.append(lista[i][\"df\"])\n",
-    "        df = df.drop_duplicates(subset=[\"id\"])\n",
-    "stop_time = time.perf_counter()\n",
-    "print(\"Time: \",stop_time-start_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15545695"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "del users\n",
-    "del ids\n",
-    "del verified"
+    "# result = []\n",
+    "# importlib.reload(tweets_utils)\n",
+    "# start_time = time.perf_counter()\n",
+    "# j = 0\n",
+    "# df = pd.DataFrame()\n",
+    "# for filename in files_users:\n",
+    "#     print(f\"Reading file: {filename}\")\n",
+    "#     result.extend(tweets_utils.process_all_data(filename, cols_users, False))\n",
+    "#     lista = result[j]\n",
+    "#     j = j + 1\n",
+    "#     print(f\"Mese numero {j}\")\n",
+    "#     for i in range(len(lista)):\n",
+    "#         df = df.append(lista[i][\"df\"])\n",
+    "#         df = df.drop_duplicates(subset=[\"id\"])\n",
+    "# stop_time = time.perf_counter()\n",
+    "# print(\"Time: \",stop_time-start_time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "good = pd.read_csv(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/all_good_users.csv\",\n",
+    "                  lineterminator=\"\\n\")\n",
+    "lst = list(good[\"screen_name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -1436,6 +1308,7 @@
       "Processing chunk 4\n",
       "Processing chunk 5\n",
       "Mese numero 1\n",
+      "24393\n",
       "Reading file: F:/Supsi/COVID-19-Tweets\\2020-02\\tweets.csv\n",
       "Processing chunk 1\n",
       "Processing chunk 2\n",
@@ -1450,6 +1323,7 @@
       "Processing chunk 11\n",
       "Processing chunk 12\n",
       "Mese numero 2\n",
+      "90145\n",
       "Reading file: F:/Supsi/COVID-19-Tweets\\2020-03\\tweets.csv\n",
       "Processing chunk 1\n",
       "Processing chunk 2\n",
@@ -1467,6 +1341,7 @@
       "Processing chunk 14\n",
       "Processing chunk 15\n",
       "Mese numero 3\n",
+      "198041\n",
       "Reading file: F:/Supsi/COVID-19-Tweets\\2020-04\\tweets.csv\n",
       "Processing chunk 1\n",
       "Processing chunk 2\n",
@@ -1482,6 +1357,7 @@
       "Processing chunk 12\n",
       "Processing chunk 13\n",
       "Mese numero 4\n",
+      "252141\n",
       "Reading file: F:/Supsi/COVID-19-Tweets\\2020-05\\tweets.csv\n",
       "Processing chunk 1\n",
       "Processing chunk 2\n",
@@ -1507,7 +1383,9 @@
       "Processing chunk 22\n",
       "Processing chunk 23\n",
       "Processing chunk 24\n",
-      "Mese numero 5\n"
+      "Mese numero 5\n",
+      "400495\n",
+      "Time:  1813.699485\n"
      ]
     }
    ],
@@ -1516,36 +1394,28 @@
     "importlib.reload(tweets_utils)\n",
     "start_time = time.perf_counter()\n",
     "j = 0\n",
-    "df = pd.DataFrame()\n",
+    "users = []\n",
     "for filename in files_tweets:\n",
     "    print(f\"Reading file: {filename}\")\n",
-    "    result.extend(tweets_utils.process_all_data(filename, [\"id\"], True))\n",
+    "    result.extend(tweets_utils.process_all_data(filename, cols_tweets, True, lst))\n",
     "    lista = result[j]\n",
     "    j = j + 1\n",
     "    print(f\"Mese numero {j}\")\n",
     "    for i in range(len(lista)):\n",
-    "        df = df.append(lista[i][\"df\"])\n",
-    "        df = df.drop_duplicates(subset=[\"id\"])\n",
+    "        users.extend(lista[i][\"user\"])\n",
+    "    print(len(users))\n",
+    "#         users = list(set(users))\n",
     "stop_time = time.perf_counter()\n",
     "print(\"Time: \",stop_time-start_time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "del result\n",
-    "del lista\n",
-    "del chunk"
+    "pd.DataFrame(users, columns=[\"screen_name\"]).to_csv(\"C:/Users/gianl/Desktop/Gi/rt_good.csv\", line_terminator=\"\\n\", encoding=\"utf-8\", index=False)"
    ]
   },
   {
@@ -3221,11 +3091,173 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Treshold"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "path = glob.glob(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/score_avaxtar/\")\n",
+    "good = pd.read_csv(path[0] + \"good_users.csv\", lineterminator=\"\\n\")\n",
+    "good = good.drop(good[good.score == \"Error\"].index)\n",
+    "bad = pd.read_csv(path[0] + \"bad_dozen.csv\", lineterminator=\"\\n\") \n",
+    "bad2 = pd.read_csv(path[0] + \"novax_manual.csv\", lineterminator=\"\\n\") \n",
+    "bad = bad.append(bad2)\n",
+    "good[\"score\"] = good[\"score\"].astype(\"float\")\n",
+    "good_lst = list(good[\"score\"])\n",
+    "good = good.append(bad)\n",
+    "good = good.iloc[:120 ,:]\n",
+    "total = good.append(bad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def threshold_calculate(threshold):\n",
+    "    true_negative = 0\n",
+    "    false_negative = 0\n",
+    "    false_positive = 0\n",
+    "    true_positive = 0\n",
+    "    lst_score = list(total[\"score\"])\n",
+    "    lst_name = list(total[\"screen_name\"])\n",
+    "    \n",
+    "    for i in range(len(total[\"score\"])):\n",
+    "        if lst_score[i] > threshold:\n",
+    "            if lst_name[i] in list(bad[\"screen_name\"]):\n",
+    "#                 print(f\"{lst_name[i]}, {lst_score[i]}\")\n",
+    "                true_negative = true_negative  + 1\n",
+    "            else:\n",
+    "                false_negative = false_negative + 1\n",
+    "        else:\n",
+    "            if lst_name[i] in list(bad[\"screen_name\"]):\n",
+    "                false_positive = false_positive + 1\n",
+    "            else:\n",
+    "                true_positive = true_positive + 1\n",
+    "    totali = len(good[\"score\"])\n",
+    "    check = (totali == true_negative + false_negative + false_positive + true_positive)\n",
+    "    print(f\"Threshold: {threshold}\")\n",
+    "    print(f\"TN: {true_negative} + FN: {false_negative} + FP: {false_positive} + TP: {true_positive}\")\n",
+    "\n",
+    "    precision = round(true_positive/(true_positive + false_positive),2)\n",
+    "    print(f\"Precision: {precision}\")\n",
+    "    recall = round(true_positive/(true_positive + false_negative),2)\n",
+    "    print(f\"Recall: {recall}\")\n",
+    "    accuracy = round((true_positive + true_negative) / ( true_negative + false_negative + false_positive + true_positive),2)\n",
+    "    print(f\"Accuracy: {accuracy}\")\n",
+    "    f1 = round(2* ((precision*recall)/(precision+recall)),2)\n",
+    "    print(f\"F1: {f1}\")\n",
+    "    print(f\"Sensitivity (TPR): {recall}\")\n",
+    "    specificity = round(true_negative/(true_negative+false_positive),2)\n",
+    "    print(f\"Specificity: {specificity}\")\n",
+    "    fpr = round(1 - specificity,2)\n",
+    "    print(f\"FPR: {fpr}\")\n",
+    "\n",
+    "    print(f\"{(1-fpr)*100}% of negatives are correctly classified\")\n",
+    "    print(f\"{recall*100}% of positives are correctly classified\")\n",
+    "    print(\"________________________________________________\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threshold: 0.6\n",
+      "TN: 106 + FN: 17 + FP: 15 + TP: 103\n",
+      "Precision: 0.87\n",
+      "Recall: 0.86\n",
+      "Accuracy: 0.87\n",
+      "F1: 0.86\n",
+      "Sensitivity (TPR): 0.86\n",
+      "Specificity: 0.88\n",
+      "FPR: 0.12\n",
+      "88.0% of negatives are correctly classified\n",
+      "86.0% of positives are correctly classified\n",
+      "________________________________________________\n",
+      "Threshold: 0.7\n",
+      "TN: 103 + FN: 14 + FP: 18 + TP: 106\n",
+      "Precision: 0.85\n",
+      "Recall: 0.88\n",
+      "Accuracy: 0.87\n",
+      "F1: 0.86\n",
+      "Sensitivity (TPR): 0.88\n",
+      "Specificity: 0.85\n",
+      "FPR: 0.15\n",
+      "85.0% of negatives are correctly classified\n",
+      "88.0% of positives are correctly classified\n",
+      "________________________________________________\n",
+      "Threshold: 0.8\n",
+      "TN: 97 + FN: 12 + FP: 24 + TP: 108\n",
+      "Precision: 0.82\n",
+      "Recall: 0.9\n",
+      "Accuracy: 0.85\n",
+      "F1: 0.86\n",
+      "Sensitivity (TPR): 0.9\n",
+      "Specificity: 0.8\n",
+      "FPR: 0.2\n",
+      "80.0% of negatives are correctly classified\n",
+      "90.0% of positives are correctly classified\n",
+      "________________________________________________\n",
+      "Threshold: 0.85\n",
+      "TN: 91 + FN: 10 + FP: 30 + TP: 110\n",
+      "Precision: 0.79\n",
+      "Recall: 0.92\n",
+      "Accuracy: 0.83\n",
+      "F1: 0.85\n",
+      "Sensitivity (TPR): 0.92\n",
+      "Specificity: 0.75\n",
+      "FPR: 0.25\n",
+      "75.0% of negatives are correctly classified\n",
+      "92.0% of positives are correctly classified\n",
+      "________________________________________________\n",
+      "Threshold: 0.9\n",
+      "TN: 86 + FN: 7 + FP: 35 + TP: 113\n",
+      "Precision: 0.76\n",
+      "Recall: 0.94\n",
+      "Accuracy: 0.83\n",
+      "F1: 0.84\n",
+      "Sensitivity (TPR): 0.94\n",
+      "Specificity: 0.71\n",
+      "FPR: 0.29\n",
+      "71.0% of negatives are correctly classified\n",
+      "94.0% of positives are correctly classified\n",
+      "________________________________________________\n",
+      "Threshold: 0.95\n",
+      "TN: 81 + FN: 4 + FP: 40 + TP: 116\n",
+      "Precision: 0.74\n",
+      "Recall: 0.97\n",
+      "Accuracy: 0.82\n",
+      "F1: 0.84\n",
+      "Sensitivity (TPR): 0.97\n",
+      "Specificity: 0.67\n",
+      "FPR: 0.33\n",
+      "67.0% of negatives are correctly classified\n",
+      "97.0% of positives are correctly classified\n",
+      "________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "threshold_calculate(0.6)\n",
+    "threshold_calculate(0.7)\n",
+    "threshold_calculate(0.8)\n",
+    "threshold_calculate(0.85)\n",
+    "threshold_calculate(0.9)\n",
+    "threshold_calculate(0.95)"
+   ]
   }
  ],
  "metadata": {
