Start writing paper

--- a/notebook/misc/Process_Tweets.ipynb
+++ b/notebook/misc/Process_Tweets.ipynb
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,9 +1689,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1705,7 +1705,7 @@
       "Processing chunk 4\n",
       "Processing chunk 5\n",
       "Mese numero 1\n",
-      "1567492\n",
+      "1865675\n",
       "Reading file: F:/Supsi/COVID-19-Tweets\\2020-02\\tweets.csv\n",
       "Processing chunk 1\n",
       "Processing chunk 2\n",
@@ -1720,7 +1720,7 @@
       "Processing chunk 11\n",
       "Processing chunk 12\n",
       "Mese numero 2\n",
-      "6148862\n",
+      "5000788\n",
       "Reading file: F:/Supsi/COVID-19-Tweets\\2020-03\\tweets.csv\n",
       "Processing chunk 1\n",
       "Processing chunk 2\n",
@@ -1737,7 +1737,52 @@
       "Processing chunk 13\n",
       "Processing chunk 14\n",
       "Processing chunk 15\n",
-      "Mese numero 3\n"
+      "Mese numero 3\n",
+      "8792895\n",
+      "Reading file: F:/Supsi/COVID-19-Tweets\\2020-04\\tweets.csv\n",
+      "Processing chunk 1\n",
+      "Processing chunk 2\n",
+      "Processing chunk 3\n",
+      "Processing chunk 4\n",
+      "Processing chunk 5\n",
+      "Processing chunk 6\n",
+      "Processing chunk 7\n",
+      "Processing chunk 8\n",
+      "Processing chunk 9\n",
+      "Processing chunk 10\n",
+      "Processing chunk 11\n",
+      "Processing chunk 12\n",
+      "Processing chunk 13\n",
+      "Mese numero 4\n",
+      "11548481\n",
+      "Reading file: F:/Supsi/COVID-19-Tweets\\2020-05\\tweets.csv\n",
+      "Processing chunk 1\n",
+      "Processing chunk 2\n",
+      "Processing chunk 3\n",
+      "Processing chunk 4\n",
+      "Processing chunk 5\n",
+      "Processing chunk 6\n",
+      "Processing chunk 7\n",
+      "Processing chunk 8\n",
+      "Processing chunk 9\n",
+      "Processing chunk 10\n",
+      "Processing chunk 11\n",
+      "Processing chunk 12\n",
+      "Processing chunk 13\n",
+      "Processing chunk 14\n",
+      "Processing chunk 15\n",
+      "Processing chunk 16\n",
+      "Processing chunk 17\n",
+      "Processing chunk 18\n",
+      "Processing chunk 19\n",
+      "Processing chunk 20\n",
+      "Processing chunk 21\n",
+      "Processing chunk 22\n",
+      "Processing chunk 23\n",
+      "Processing chunk 24\n",
+      "Mese numero 5\n",
+      "15560403\n",
+      "Time:  4672.5641469\n"
      ]
     }
    ],
@@ -1745,27 +1790,41 @@
     "result = []\n",
     "importlib.reload(tweets_utils)\n",
     "start_time = time.perf_counter()\n",
-    "cols = [\"id\", \"id_str\", \"user_id\", \"user_screen_name\", \"text\",\"in_reply_to_status_id\",\n",
-    "        \"in_reply_to_status_id_str\" ,\"in_reply_to_user_id\" ,\"in_reply_to_user_id_str\" ,\"in_reply_to_screen_name\",\n",
-    "        \"rt_created_at\", \"rt_in_reply_to_status_id\", \"rt_in_reply_to_user_id\", \"rt_id\", \"rt_user_id\", \"rt_created_at\",\n",
-    "        \"rt_user_screen_name\", \"quoted_status_id\" ,\"quoted_status_text\" ,\"quoted_status_created_at\", \"quoted_user_id\",\n",
-    "        \"quoted_user_created_at\", \"hashtags\", \"user_mentions\", \"urls\", \"created_at\", \"retweet_count\"]\n",
-    "lst = list(pd.read_csv(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/utenti_attivi.csv\",\n",
-    "                 lineterminator=\"\\n\", low_memory=False)[\"screen_name\"])\n",
+    "# cols = [\"id\", \"id_str\", \"user_id\", \"user_screen_name\", \"text\",\"in_reply_to_status_id\",\n",
+    "#         \"in_reply_to_status_id_str\" ,\"in_reply_to_user_id\" ,\"in_reply_to_user_id_str\" ,\"in_reply_to_screen_name\",\n",
+    "#         \"rt_created_at\", \"rt_in_reply_to_status_id\", \"rt_in_reply_to_user_id\", \"rt_id\", \"rt_user_id\", \"rt_created_at\",\n",
+    "#         \"rt_user_screen_name\", \"quoted_status_id\" ,\"quoted_status_text\" ,\"quoted_status_created_at\", \"quoted_user_id\",\n",
+    "#         \"quoted_user_created_at\", \"hashtags\", \"user_mentions\", \"urls\", \"created_at\", \"retweet_count\"]\n",
+    "# lst = list(pd.read_csv(\"C:/Users/gianl/Desktop/Gi/Supsi/BachelorProject/csv/utenti_attivi.csv\",\n",
+    "#                  lineterminator=\"\\n\", low_memory=False)[\"screen_name\"])\n",
+    "cols = [\"user_screen_name\"]\n",
     "j = 0\n",
-    "users = pd.DataFrame()\n",
+    "users = []\n",
     "for filename in files_tweets:\n",
     "    print(f\"Reading file: {filename}\")\n",
-    "    result.extend(tweets_utils.process_all_data(filename, cols, True, lst))\n",
+    "    result.extend(tweets_utils.process_all_data(filename, cols, True))\n",
     "    lista = result[j]\n",
     "    j = j + 1\n",
     "    print(f\"Mese numero {j}\")\n",
     "    for i in range(len(lista)):\n",
-    "        users = users.append(lista[i][\"df\"])\n",
+    "        users.extend(lista[i][\"names\"])\n",
+    "        users = list(set(users))\n",
     "    print(len(users))\n",
     "#         users = list(set(users))\n",
     "stop_time = time.perf_counter()\n",
     "print(\"Time: \",stop_time-start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = [4,5,6]\n",
+    "a = a.extend(b)\n",
+    "a"
    ]
   },
   {
@@ -4454,7 +4513,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
