--- a/notebook/network/Run_network.ipynb
+++ b/notebook/network/Run_network.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "4b8ee4e8",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "13266f3a",
    "metadata": {},
    "outputs": [
@@ -77,28 +77,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Terri55364130</td>\n",
-       "      <td>waterlyll</td>\n",
+       "      <td>Huerconetzin</td>\n",
+       "      <td>AnneKPIX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>wildwolf1313</td>\n",
-       "      <td>BuyDirectUSA</td>\n",
+       "      <td>JustAnotherAme4</td>\n",
+       "      <td>cnni</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Barbara_A_1977</td>\n",
-       "      <td>g_easton819</td>\n",
+       "      <td>HHSRegion8</td>\n",
+       "      <td>CDCgov</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>dad_liams</td>\n",
-       "      <td>Just4TheCause</td>\n",
+       "      <td>Paxman42</td>\n",
+       "      <td>OurWarOnCancer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>formarrowdbs</td>\n",
-       "      <td>EpochTimes</td>\n",
+       "      <td>beerhowell</td>\n",
+       "      <td>nytimes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -106,60 +106,60 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2191438</th>\n",
-       "      <td>RohitChechi4</td>\n",
-       "      <td>ArjunB9591</td>\n",
+       "      <th>48312499</th>\n",
+       "      <td>Dinora21971394</td>\n",
+       "      <td>saludhn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2191439</th>\n",
-       "      <td>Gibbs_mom</td>\n",
-       "      <td>BuckSexton</td>\n",
+       "      <th>48312500</th>\n",
+       "      <td>EllyJonkerVliet</td>\n",
+       "      <td>StopEcocideNL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2191440</th>\n",
-       "      <td>Tribble_Bait</td>\n",
-       "      <td>awstar11</td>\n",
+       "      <th>48312501</th>\n",
+       "      <td>anna76746180</td>\n",
+       "      <td>Haggis_UK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2191441</th>\n",
-       "      <td>TTysonToni1</td>\n",
-       "      <td>RealMattCouch</td>\n",
+       "      <th>48312502</th>\n",
+       "      <td>SueHealy16</td>\n",
+       "      <td>Auchindrain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2191442</th>\n",
-       "      <td>SchnydersMicah</td>\n",
-       "      <td>aubrey_huff</td>\n",
+       "      <th>48312503</th>\n",
+       "      <td>inquisitor111</td>\n",
+       "      <td>StagecoachBBird</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2191443 rows × 2 columns</p>\n",
+       "<p>48312504 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   name        rt_name\n",
-       "0         Terri55364130      waterlyll\n",
-       "1          wildwolf1313   BuyDirectUSA\n",
-       "2        Barbara_A_1977    g_easton819\n",
-       "3             dad_liams  Just4TheCause\n",
-       "4          formarrowdbs     EpochTimes\n",
-       "...                 ...            ...\n",
-       "2191438    RohitChechi4     ArjunB9591\n",
-       "2191439       Gibbs_mom     BuckSexton\n",
-       "2191440    Tribble_Bait       awstar11\n",
-       "2191441     TTysonToni1  RealMattCouch\n",
-       "2191442  SchnydersMicah    aubrey_huff\n",
+       "                     name          rt_name\n",
+       "0            Huerconetzin         AnneKPIX\n",
+       "1         JustAnotherAme4             cnni\n",
+       "2              HHSRegion8           CDCgov\n",
+       "3                Paxman42   OurWarOnCancer\n",
+       "4              beerhowell          nytimes\n",
+       "...                   ...              ...\n",
+       "48312499   Dinora21971394          saludhn\n",
+       "48312500  EllyJonkerVliet    StopEcocideNL\n",
+       "48312501     anna76746180        Haggis_UK\n",
+       "48312502       SueHealy16      Auchindrain\n",
+       "48312503    inquisitor111  StagecoachBBird\n",
        "\n",
-       "[2191443 rows x 2 columns]"
+       "[48312504 rows x 2 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "path_nt = glob.glob(\"F:/Supsi/COVID-19-Tweets/large_files/rt_network/names/\")\n",
-    "df = pd.read_csv(path_nt[0] + \"rt_nt_12_leiden.csv\", lineterminator=\"\\n\", low_memory=False)\n",
+    "df = pd.read_csv(path_nt[0] + \"user_rtuser.csv\", lineterminator=\"\\n\", low_memory=False)\n",
     "df"
    ]
   },
@@ -2441,7 +2441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
